# dssolve_c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.py  build.yml
src/: CMakeLists.txt  dssolve.cpp  dssolve.h  test_dssolve.cpp
tests/: CMakeLists.txt
